edit story apis
