# ACN_backend_service/swagger.yml
@@ -1519,4 +1519,46 @@ paths:
             type: array
             items:
               type: object
-              example: {'id':1, 'title':'...', 'description':'...', 'community':1, 'image':<url> 'creation_date':'2021-04-29T05:43:32.987417+04:30', 'begin_time':'2021-04-29T05:43:32.987417+04:30', 'creator_info':{'username':'mrm78','avatar':'<url>'}}
+              example: {'id':1, 'title':'...', 'community_info':{'id':2, 'title':'com1', 'image':'<url>'}, 'image':<url> , 'is_seen':true}
+
+
+  /community/story_info:
+    get:
+      tags:
+        - Community
+      summary: get details of an story (non passed event)
+      description: get details of an story (non passed event)
+      consumes:
+      - application/json
+      produces:
+      - application/json
+      parameters:
+      - in: body
+        name: community info
+        schema:
+          type: object
+          required:
+          - event_id
+          properties:
+            event_id:
+              type: integer
+              example: 5
+      responses:
+        200-1:
+          description: success
+          schema:
+            type: array
+            items:
+              type: object
+              example: {'id':1, 'title':'...', 'description':'...', 'community_info':{'id':2, 'title':'com1', 'image':'<url>'}, 'image':<url> 'creation_date':'2021-04-29T05:43:32.987417+04:30', 'begin_time':'2021-04-29T05:43:32.987417+04:30', 'creator_info':{'username':'mrm78','avatar':'<url>'}}
+        200-2:
+          description: failed
+          schema:
+            type: object
+            properties:
+              status:
+                type: string
+                example: failed
+              error:
+                type: string
+                example: invalid event id
